--- a/package.json
+++ b/package.json
@@ -11,5 +11,17 @@
     "ecosystem:cordova"
   ],
   "author": "Apache Cordova Team",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "devDependencies": {
+    "cordova-browser": "^7.0.0",
+    "cordova-plugin-device": "^3.0.0"
+  },
+  "cordova": {
+    "platforms": [
+      "browser"
+    ],
+    "plugins": {
+      "cordova-plugin-device": {}
+    }
+  }
 }
